WIP: break down to the nodejs base case.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,5 +11,5 @@ html
     script(type='text/javascript', src='/javascripts/raphael-min.js')
     script(type='text/javascript', src='/javascripts/state-machine.min.js')
     script(type='text/javascript', src='/javascripts/underscore-min.js')
-    script(type='text/javascript', src='/javascripts/mmtss.js')
+    script(type='text/javascript', src='/javascripts/shmile.js')
   body.nicegradient!= body
