--- a/views/index.jade
+++ b/views/index.jade
@@ -1,19 +1,2 @@
-#window
-  #viewport
-
-  #controls
-    input#record(type="radio", data-icon="◉", name="record-toggle")
-    input#reset(type="radio", data-icon="↻", name="play-toggle")
-
-  #status-text
-    h2.status
-    p.description
-
-  #instrument
-    h2
-      | You are now playing the
-      span#current-instrument hot drums
-
-  #thelogo
-    h1#logo
-        span mmtss
+section#viewport
+  button#start-button.awesome.superlarge.boinkyellow Start
