--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    link(rel='stylesheet', href='/css/simurai.radio.css')
+    link(rel='stylesheet', href='/css/shmile.css')
     link(href='http://fonts.googleapis.com/css?family=Geo', rel='stylesheet')
     script(type='text/javascript', src='/javascripts/jquery-1.6.1.min.js')
     script(type='text/javascript', src='/javascripts/json2.js')
@@ -11,5 +11,7 @@ html
     script(type='text/javascript', src='/javascripts/raphael-min.js')
     script(type='text/javascript', src='/javascripts/state-machine.min.js')
     script(type='text/javascript', src='/javascripts/underscore-min.js')
+    script(type='text/javascript', src='/javascripts/camera_utils.js')
+    script(type='text/javascript', src='/javascripts/photo_view.js')    
     script(type='text/javascript', src='/javascripts/shmile.js')
   body.nicegradient!= body
