--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,8 @@
-section#viewport
-  button#start-button.awesome.superlarge.boinkyellow Start
+extends layout
+
+block title
+  = "shmile!"
+
+block content
+  section#viewport
+    button#start-button.awesome.superlarge.boinkyellow Start
