--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
 
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='viewport', content="initial-scale=1.0, user-scalable=no")
-    meta(name='apple-mobile-web-app-status-bar-style', content='black-translucent')
+    meta(name='apple-mobile-web-app-status-bar-style', content='black')
 
     script(type='text/javascript', src='/javascripts/jquery-1.6.1.min.js')
     script(type='text/javascript', src='/socket.io/socket.io.js')
