--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
     script(type='text/javascript', src='/javascripts/underscore-min.js')
 
     each js_file in extra_js
-      script(type='text/javascript', src='/javascripts/' + js_file + '.js')
+      script(type='text/javascript', src='/javascripts/shmile-client/' + js_file + '.js')
 
   body.nicegradient
     block content
