Adding Backbone to the PhotoView.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html
     script(type='text/javascript', src='/components/raphael/raphael-min.js')
     script(type='text/javascript', src='/components/javascript-state-machine/state-machine.min.js')
     script(type='text/javascript', src='/components/underscore/underscore-min.js')
+    script(type='text/javascript', src='/components/backbone/backbone.js')
 
     each js_file in extra_js
       script(type='text/javascript', src='/javascripts/' + js_file + '.js')
