--- a/views/gallery_layout.jade
+++ b/views/gallery_layout.jade
@@ -21,11 +21,8 @@ html
     script(type='text/javascript', src='/components/underscore/underscore-min.js')
     script(type='text/javascript', src='/components/backbone/backbone.js')
 
-    // Frontend app: shmile-ui
-    script(type='text/javascript', src='/components/shmile-ui/ui/cameraUtils.js')
-    script(type='text/javascript', src='/components/shmile-ui/ui/photoView.js')
-    script(type='text/javascript', src='/components/shmile-ui/ui/config.js')
-    script(type='text/javascript', src='/components/shmile-ui/ui/shmile.js')
+    each js_file in extra_js
+      link(rel='stylesheet', href='/javascripts/' + js_file + '.js')
 
   body.nicegradient
     block content
